
WinMerge 2.7.7.4
  Detect (and read/write) UTF-8 files without BOM (#1879271)
  Tell user that file is not a conflict file (#1880423)
  Allow opening conflict file from command line (#1880857)
  Use radio symbol for current EOL menu item (#1869755)
  Ask and create pair for unique folder and open them (#1881454)
  BugFix: Always return 0 to command line (#1854419)
  Translation updates:
  - Croatian (r4952)
  - Japanese (r4962)

WinMerge 2.7.7.3 - 2008-01-23 (r4951)
  Resolve conflict files (cvs, svn...) (#1875129)
  Save line filter when edit box loses focus (#1875853)
  Add link to translations website at help menu (#1699883)
  Manual: Add instructions for conflict file resolving (#1876770)
  Manual: Document third path given to command line (#1877735)
  BugFix: Fix Quick Compare regression in 2.7.7.2 (#1872165)
  Bugfix: Clipped text in file saving error message (#1874854)

WinMerge 2.7.7.2 - 2008-01-14 (r4915)
  Syntax highlighting for PowerShell files (#1859657)
  Syntax highlighting for PO(T) files (#1866221)
  Change font size with Ctrl + MouseWheel (#1865795, #1869686)
  Horizontal scrolling with Shift + MouseWheel (#1865795)
  Installer: Add support for integration with latest version of TortoiseCVS and
    TortoiseSVN x64 (#1865168)
  Close compare tab with middle mouse button (#1865220)
  Add index.html for documentation folders (#1866183)
  Manual: Clarify file filters folder name matching (#1867212)
  Improve file compare margin icons location (#1718699)
  Enable file compare to open binary files (#1869647)
  File encoding dialog for file compare (#1871079)
  BugFix: Crash when using TrackPoint middle-button scrolling (#1864040)
  BugFix: WinMerge didn't show the contents of the symbolic link target (#1864978)
  BugFix: Unused registry key HKCU\Thingamahoochie\WinMerge was created 
    (#1865202)
  BugFix: Register.bat didn't work on Windows 98 and Vista (#1869821)
  BugFix: Open-dialog was not displayed on Windows 98 (#1866442, #1869858)